# SGX-app-LAZY

./: .gitignore  Makefile  README.md
SampleCode_by_intel/LocalAttestation/: CMakeLists.txt  app
SampleCode_by_intel/LocalAttestation/Enclave1/: Enclave1_t.c
SampleCode_by_intel/LocalAttestation/Enclave2/: Enclave2_t.c
SampleCode_by_intel/LocalAttestation/Enclave3/: Enclave3_t.c
SampleCode_by_intel/LocalAttestation/LocalAttestationCode/: LocalAttestationCode_t.c
SampleCode_by_intel/SampleEnclave/: CMakeLists.txt  app
SampleCode_by_intel/SampleEnclave/App/: Enclave_u.c
SampleCode_by_intel/SampleEnclave/Enclave/: Enclave_t.c
SampleCode_by_intel/SealedData/DRM_enclave/: DRM_enclave_t.c  DRM_enclave_t.h
SampleCode_template/: CMakeLists.txt  Makefile  app  app_release  enclave.token  template_pri_key.pem  template_pub_key.pem
SampleCode_template/App/: App.cpp
SampleCode_template/App/sgx_utils/: sgx_utils.cpp
Template_C_LAZY/: CMakeLists.txt  Makefile
Template_C_LAZY/App/: App.c  App.h
Template_C_LAZY/App/Enclave/: Enclave_Handler.c  Enclave_Handler.h
Template_C_LAZY/Enclave/: Enclave.c  Enclave.edl  Enclave.h
simple/: .cproject  .gitignore  CMakeLists.txt  Makefile  make_clean  make_clean.py
simple/App/: App.c  App.h
simple/App/Enclave/: Enclave_Handler.h
simple/App/User/: HelloWorld.c  LazySyscall.c
simple/Enclave/: Enclave.c  Enclave.h
simple/HelloWorldCode/: HelloWorld.c  HelloWorld.h
simple_rdtscp/: .cproject  .gitignore  .project  Makefile  app  app_sim
simple_rdtscp/App/: App.c  App.h  Enclave_u.c  Enclave_u.h
simple_rdtscp/App/Enclave/: Enclave_Handler.c  Enclave_Handler.h
simple_rdtscp/App/User/: HelloWorld.c  HelloWorld.h  LAZYRdtscp.c  LAZYRdtscp.h  LazySyscall.h
simple_rdtscp/Enclave/: Enclave.c  Enclave.edl  Enclave.h  Enclave_t.c  Enclave_t.h
simple_rdtscp/Include/: envdefine.h
